--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html>
 
 <head>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css"
+        integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
     <script type="text/javascript" async=1>
 
-        ; (function (p, l, o, w, i, n, g) {
+         ; (function (p, l, o, w, i, n, g) {
             if (!p[i]) {
                 p.GlobalSnowplowNamespace = p.GlobalSnowplowNamespace || [];
                 p.GlobalSnowplowNamespace.push(i); p[i] = function () {
@@ -32,201 +44,89 @@
         });
 
         // send first heartbeat after 10 seconds, and every 10 seconds thereafter
-        snowplow("enableActivityTracking", { minimumVisitLength: 10, heartbeatDelay: 10 });
-        snowplow("enableLinkClickTracking");
-        snowplow("trackPageView");
+        // snowplow("enableActivityTracking", { minimumVisitLength: 10, heartbeatDelay: 10 });
+        // snowplow("enableLinkClickTracking");
+        // snowplow("trackPageView");
 
+        function form1submit() {
+            var firstName = document.getElementById("form1_first_name").value;
+            var contact = document.getElementById("form1_contact_number").value;
+            var opt = document.querySelector('input[name="opt_into_marketing"]:checked').value;
+            console.log(firstName)
+            console.log(contact)
+            console.log(opt)
+            window.snowplow('trackSelfDescribingEvent', {
+                event: {
+                    schema: 'iglu:ag.betonline/basic_form_tracking/jsonschema/1-0-0',
+                    data: {
+                        form1_first_name: firstName,
+                        form1_contact_number: contact,
+                        opt_into_marketing: opt == 1
+                    }
+                }
+            });
+            // window.alert("thanks!")
+            // document.getElementsByClassName("form-horizontal").reset();
+        };
     </script>
-    <title>Ejemplo snowplow form</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
-        integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-    <style>
-        html,
-        body {
-            display: flex;
-            justify-content: center;
-            height: 100%;
-        }
-
-        body,
-        div,
-        h1,
-        form,
-        input,
-        p {
-            padding: 0;
-            margin: 0;
-            outline: none;
-            font-family: Roboto, Arial, sans-serif;
-            font-size: 16px;
-            color: #666;
-        }
-
-        h1 {
-            padding: 10px 0;
-            font-size: 32px;
-            font-weight: 300;
-            text-align: center;
-        }
-
-        p {
-            font-size: 12px;
-        }
-
-        hr {
-            color: #a9a9a9;
-            opacity: 0.3;
-        }
-
-        .main-block {
-            max-width: 340px;
-            min-height: 460px;
-            padding: 10px 0;
-            margin: auto;
-            border-radius: 5px;
-            border: solid 1px #ccc;
-            box-shadow: 1px 2px 5px rgba(0, 0, 0, .31);
-            background: #ebebeb;
-        }
-
-        form {
-            margin: 0 30px;
-        }
-
-        .account-type,
-        .gender {
-            margin: 15px 0;
-        }
-
-        input[type=radio] {
-            display: none;
-        }
-
-        label#icon {
-            margin: 0;
-            border-radius: 5px 0 0 5px;
-        }
-
-        label.radio {
-            position: relative;
-            display: inline-block;
-            padding-top: 4px;
-            margin-right: 20px;
-            text-indent: 30px;
-            overflow: visible;
-            cursor: pointer;
-        }
-
-        label.radio:before {
-            content: "";
-            position: absolute;
-            top: 2px;
-            left: 0;
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-            background: #1c87c9;
-        }
-
-        label.radio:after {
-            content: "";
-            position: absolute;
-            width: 9px;
-            height: 4px;
-            top: 8px;
-            left: 4px;
-            border: 3px solid #fff;
-            border-top: none;
-            border-right: none;
-            transform: rotate(-45deg);
-            opacity: 0;
-        }
-
-        input[type=radio]:checked+label:after {
-            opacity: 1;
-        }
-
-        input[type=text],
-        input[type=password] {
-            width: calc(100% - 57px);
-            height: 36px;
-            margin: 13px 0 0 -5px;
-            padding-left: 10px;
-            border-radius: 0 5px 5px 0;
-            border: solid 1px #cbc9c9;
-            box-shadow: 1px 2px 5px rgba(0, 0, 0, .09);
-            background: #fff;
-        }
-
-        input[type=password] {
-            margin-bottom: 15px;
-        }
-
-        #icon {
-            display: inline-block;
-            padding: 9.3px 15px;
-            box-shadow: 1px 2px 5px rgba(0, 0, 0, .09);
-            background: #1c87c9;
-            color: #fff;
-            text-align: center;
-        }
-
-        .btn-block {
-            margin-top: 10px;
-            text-align: center;
-        }
-
-        button {
-            width: 100%;
-            padding: 10px 0;
-            margin: 10px auto;
-            border-radius: 5px;
-            border: none;
-            background: #1c87c9;
-            font-size: 14px;
-            font-weight: 600;
-            color: #fff;
-        }
-
-        button:hover {
-            background: #26a9e0;
-        }
-    </style>
 </head>
 
 <body>
-    <div class="main-block">
-        <h1>Registration</h1>
-        <form action="/">
-            <hr>
-            <div class="account-type">
-                <input type="radio" value="none" id="radioOne" name="account" checked />
-                <label for="radioOne" class="radio">Personal</label>
-                <input type="radio" value="none" id="radioTwo" name="account" />
-                <label for="radioTwo" class="radio">Company</label>
+    <form class="form-horizontal">
+        <fieldset>
+
+            <!-- Form Name -->
+            <legend>Form Name</legend>
+
+            <!-- Text input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="form1_first_name">First name</label>
+                <div class="col-md-4">
+                    <input id="form1_first_name" name="form1_first_name" type="text" placeholder=""
+                        class="form-control input-md" required="">
+
+                </div>
             </div>
-            <hr>
-            <label id="icon" for="name"><i class="fas fa-envelope"></i></label>
-            <input type="text" name="name" id="name" placeholder="Email" required />
-            <label id="icon" for="name"><i class="fas fa-user"></i></label>
-            <input type="text" name="name" id="name" placeholder="Name" required />
-            <label id="icon" for="name"><i class="fas fa-unlock-alt"></i></label>
-            <input type="password" name="name" id="name" placeholder="Password" required />
-            <hr>
-            <div class="gender">
-                <input type="radio" value="none" id="male" name="gender" checked />
-                <label for="male" class="radio">Male</label>
-                <input type="radio" value="none" id="female" name="gender" />
-                <label for="female" class="radio">Female</label>
+
+            <!-- Text input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="form1_contact_number">Contact number</label>
+                <div class="col-md-4">
+                    <input id="form1_contact_number" name="form1_contact_number" type="text" placeholder=""
+                        class="form-control input-md" value="1234567890">
+
+                </div>
             </div>
-            <hr>
-            <div class="btn-block">
-                <p>By clicking Register, you agree on our <a href="https://www.w3docs.com/privacy-policy">Privacy Policy
-                        for W3Docs</a>.</p>
-                <button type="submit" href="/">Submit</button>
+
+            <!-- Multiple Checkboxes -->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="opt_into_marketing">Receive marketing info?</label>
+                <div class="col-md-4">
+                    <div class="checkbox">
+                        <label for="opt_into_marketing-0">
+                            <input type="checkbox" name="opt_into_marketing" id="opt_into_marketing-0" value="1">
+                            Yes
+                        </label>
+                    </div>
+                    <div class="checkbox">
+                        <label for="opt_into_marketing-1">
+                            <input type="checkbox" name="opt_into_marketing" id="opt_into_marketing-1" value="0">
+                            No
+                        </label>
+                    </div>
+                </div>
             </div>
-        </form>
+
+
+
+        </fieldset>
+    </form>
+    <!-- Button -->
+    <div class="form-group">
+        <label class="col-md-4 control-label" for="button"></label>
+        <div class="col-md-4">
+            <button id="button" name="button" class="btn btn-primary" onclick="form1submit()">Submit</button>
+        </div>
     </div>
 </body>
 
